--- a/contest/contest/MapGame.fxml
+++ b/contest/contest/MapGame.fxml
@@ -19,6 +19,7 @@
 	<Button text="func3" prefWidth="100"/>
 	<Button text="func4" prefWidth="100"/>
       </children>
+      <Label fx:id="score" prefWidth="30" prefHeight="10" text = "Score">
     </HBox>
     <GridPane fx:id="mapGrid" prefWidth="360" prefHeight="360" >
     </GridPane>
