--- a/contest/contest/MapGame.fxml
+++ b/contest/contest/MapGame.fxml
@@ -20,6 +20,7 @@
 	<Button text="func4" prefWidth="100"/>
       </children>
       <Label fx:id="score" prefWidth="30" prefHeight="10" text = "Score">
+      </Label>
     </HBox>
     <GridPane fx:id="mapGrid" prefWidth="360" prefHeight="360" >
     </GridPane>
