--- a/contest/contest/MapGame.fxml
+++ b/contest/contest/MapGame.fxml
@@ -10,18 +10,38 @@
   <padding>
     <Insets top="10" right="10" bottom="10" left="10"/>
   </padding>
-  
+
   <children>
     <HBox prefHeight="50">
       <children>
-	<Button text="func1" prefWidth="100" onAction="#func1ButtonAction"/>
-	<Button text="func2" prefWidth="100"/>
-	<Button text="func3" prefWidth="100"/>
-	<Button text="func4" prefWidth="100"/>
+        <Button text="func1" prefWidth="100" onAction="#func1ButtonAction"/>
+        <Button text="func2" prefWidth="100"/>
+        <Button text="func3" prefWidth="100"/>
+        <Button text="func4" prefWidth="100"/>
       </children>
-    </HBox>
-    <GridPane fx:id="mapGrid" prefWidth="360" prefHeight="360" >
-    </GridPane>
+      <children>
+        <VBox prefWidth="160">
+          <children>
+            <Label text="WhiteCat" />
+            <HBox>
+              <children>
+                <Label text="SCORE:" />
+                <Label fx:id="SCORECOUNT" text="" />
+              </children>
+            </HBox>
+            <HBox>
+              <children>
+                <Label text="STAGE:" />
+                <Label fx:id="STAGECOUNT" text="" />
+              </children>
+            </HBox>
+          </children>
+        </VBox>
+            </children>
+      </HBox>
+      <GridPane fx:id="mapGrid" prefWidth="360" prefHeight="360" >
+      </GridPane>
 
-  </children>
-</VBox>
+
+    </children>
+  </VBox>
