制限時間の表示を追加しました

--- a/contest/contest/MapGame.fxml
+++ b/contest/contest/MapGame.fxml
@@ -35,6 +35,12 @@
                 <Label fx:id="STAGECOUNT" text="" />
               </children>
             </HBox>
+            <HBox>
+              <children>
+                <Label text="TIME:" />
+                <Label fx:id="TIMECOUNT" text="" />
+              </children>
+            </HBox>
           </children>
         </VBox>
             </children>
